Cleanup Influencers endpoint
